Validate configured HTTP bind addresses

--- a/Application.csproj
+++ b/Application.csproj
@@ -22,4 +22,9 @@
     <Compile Remove="Tests\**\*.cs" />
     <None Remove="Tests\**\*" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
