fixed file to look for

--- a/appsettings.json
+++ b/appsettings.json
@@ -17,7 +17,7 @@
     "ClockExpectedHz": 10
   },
   "UiAutomation": {
-    "ProcessName": "ICombat.Desktop",
+    "ProcessName": "ICombat.Desktop.exe",
     "WindowTitleRegex": "^ICE$",
     "FocusTimeoutMs": 1500,
     "PostShortcutDelayMs": 150,
