Updated networking defaults

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Http": {
-    "Urls": ["http://192.168.1.234:9055"],
+    "Urls": ["http://192.168.1.110:9055","http://192.168.0.2:9055"],
     "BearerToken": null,
     "AllowedCidrs": ["192.168.1.0/24"],
     "RequestTimeoutSeconds": 5
