Add UI player counts and preflight checklist

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,8 @@
     "LtDisplayedDurationSec": 219,
     "AutoEndNoPlantAtSec": 180,
     "DefuseWindowSec": 40,
-    "ClockExpectedHz": 10
+    "ClockExpectedHz": 10,
+    "PreflightExpectedMatchLengthSec": 219
   },
   "UiAutomation": {
     "ProcessName": "ICombat.Desktop.exe",
