FIxed issue with prop payload not being received

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "Http": {
     "Urls": ["http://192.168.1.110:9055","http://192.168.0.2:9055","http://192.168.1.234:9055"],
     "BearerToken": null,
-    "AllowedCidrs": ["192.168.1.0/24"],
+    "AllowedCidrs": ["192.168.1.0/24", "192.168.0.0/24"],
     "RequestTimeoutSeconds": 5
   },
   "Relay": {
@@ -15,6 +15,7 @@
     "AutoEndNoPlantAtSec": 180,
     "DefuseWindowSec": 40,
     "ClockExpectedHz": 10,
+    "LatencyWindow": 10,
     "PreflightExpectedMatchLengthSec": 219
   },
   "UiAutomation": {
