Add separate relay endpoints for match and prop

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,8 @@
   "Relay": {
     "Enabled": false,
     "Url": "",
+    "MatchUrl": "",
+    "PropUrl": "",
     "BearerToken": null
   },
   "Match": {
