--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,9 @@
   },
   "Relay": {
     "Enabled": false,
-    "Url": "",
-    "MatchUrl": "",
-    "PropUrl": "",
-    "BearerToken": null
+    "Url": "http://relay-endpoint/combined",
+    "BearerToken": null,
+    "EnableSchemaValidation": false
   },
   "Match": {
     "LtDisplayedDurationSec": 219,
