first implementation of toolbar

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,6 +19,12 @@
     "LatencyWindow": 10,
     "PreflightExpectedMatchLengthSec": 219
   },
+  "Preflight": {
+    "Enabled": true,
+    "ExpectedTeamNames": [ "Team 1", "Team 2" ],
+    "ExpectedPlayerNamePattern": "^Team\\s(1|2)\\s[A-Z]$",
+    "EnforceMatchCancellation": false
+  },
   "UiAutomation": {
     "ProcessName": "ICombat.Desktop.exe",
     "WindowTitleRegex": "^ICE$",
