minor changes to default config

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "Relay": {
     "Enabled": false,
-    "Url": "http://relay-endpoint/combined",
+    "Url": "http://10.40.32.2:8081/PSDO/PSDL/icombat-lasertag-event-maker/webhook/icombat",
     "BearerToken": null,
     "EnableSchemaValidation": false
   },
